replace deprecated Class.newInstance() by Class.getDeclaredConstructor().newInstance();
git-svn-id: https://svn.mkgmap.org.uk/mkgmap/mkgmap@4797 25d90789-57f7-4ee0-8453-03a3dfeeeb22